<?php

namespace App\Database;

use App\Database\Model\Post;

class PostMapper
{
    public function map(array $data): Post
    {
        //
    }
}
